--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Soon &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Globelux</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -70,15 +70,16 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc animate-box">
 							<nav class="fh5co-nav" role="navigation">
-								<div id="fh5co-logo"><a href="index.html">Soon<strong>.</strong></a></div>
+								<div id="fh5co-logo"><a href="index.html"><img src="images/logo.png"></a></div>
 							</nav>
 							<h1>We Are Coming Soon!</h1>
-							<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+							<!-- <h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2> -->
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
 								<div class="col-md-12 desc">
-									<h2>Our webiste is opening soon. <br> Please register to notify you when it's ready!</h2>
-									<form class="form-inline" id="fh5co-header-subscribe">
+									<h2>Our webiste is opening soon. <br> Please contact us to notify you when it's ready!</h2>
+									<h2>MOB: +91 8281954573<br>EMAIL: globeluxind@gmail.com</h2>
+									<!-- <form class="form-inline" id="fh5co-header-subscribe">
 										<div class="col-md-12 col-md-offset-0">
 											<div class="form-group">
 												<input type="text" class="form-control" id="email" placeholder="Get notify by email">
@@ -91,7 +92,7 @@
 										<li><a href="#"><i class="icon-facebook-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-linkedin-with-circle"></i></a></li>
 										<li><a href="#"><i class="icon-dribbble-with-circle"></i></a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</div>
 						</div>
@@ -99,7 +100,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="bg-cover js-fullheight" style="background-image:url(images/img_bg_1.jpg);">
+		<div class="bg-cover js-fullheight" style="background-image:url(images/img_bg_1.png);">
 			
 		</div>
 	</div>
